welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value to is not a member of Boolean
  if (day==1 to 5 & vacation==false) {
             ^alarmClock:2: error: overloaded method value & with alternatives:
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
  if (day==1 to 5 & vacation==false) {
                  ^alarmClock:5: error: value to is not a member of Boolean
    if (day==1 to 5 & vacation==true)
               ^alarmClock:5: error: overloaded method value & with alternatives:
  (x: Long)Long <and>
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
    if (day==1 to 5 & vacation==true)
                    ^alarmClock:17: error: type mismatch;
 found   : Unit
 required: String
          if (day==0 & vacation==true)
          ^