welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (day==1 to 5 & vacation==false) {
    return "7:00"
  } else {
    if (day==1 to 5 & vacation==true)
    return "10:00";
  
    if (day==6 & vacation==false) {
      return "10:00"
    } else {
      if (day==0 & vacation==false) {
        return "10:00"
      } else {
        if (day==6 & vacation==true) {
          return "off"
        } else {
          if (day==0 & vacation==true)
          return "off"
        }
      }
    }
  }
}
  